--- a/myproject.html
+++ b/myproject.html
@@ -37,6 +37,11 @@
 <img src="download.jpg">
   <h1>Jack Sparrow</h1>
   <p>Hi! My name is Jack and I am a pirate.</p>
-  <input type="email" placeholder="Please type your email">
-  <input type="submit">
+ 
+  
+  <form action="https://formspree.io/scream880906@hotmail.com" method="POST">
+    <input type="email" placeholder="Please type your email" name="_replyto">
+    <input type="submit" value="Send">
+  </form>
+  
 </body>
